[package]
name = "openai_api_client"
version = "0.1.0"
edition = "2021"
authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
awc = { version = "3.0.1", features=["rustls"] }
rustls = "0.20.8"